[themes/epfl-master] Fix alignment bug for "mail" icon in "people" shortcode content

--- a/data/wp/wp-content/themes/epfl-master/assets/scss/style.scss
+++ b/data/wp/wp-content/themes/epfl-master/assets/scss/style.scss
@@ -914,6 +914,10 @@ ul.bottin {
   }
 }
 
+.peopleListBox .button.mail {
+  float: left;
+}
+
 .bottin.default-list .pers {
   @include clearfix;
   border-bottom: 1px solid #aaaaaa;
